// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test GifExpertApp should be render component 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <ol />
</Fragment>
`;

exports[`test GifExpertApp should be show list of categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <ol>
    <GifGrid
      category="Hello"
      key="Hello"
    />
    <GifGrid
      category="Bye"
      key="Bye"
    />
  </ol>
</Fragment>
`;
